--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 HELLO WORLD
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Samuel Starbuck</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body>
+    <img id="bottom" src="bg.jpg">
+    <img id="top" src="bg2.jpg">
+  </body>
+</html>
