start adding content

--- a/index.html
+++ b/index.html
@@ -1,13 +1,72 @@
-HELLO WORLD
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <title>Samuel Starbuck</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+
+    <!-- Basic Page Needs
+         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <meta charset="utf-8">
+    <title>Samuel Starbuck Hastings</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <!-- Mobile Specific Metas
+         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- FONT
+         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
+    <!-- CSS
+         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/skeleton.css">
+    <link rel="stylesheet" href="style.css" />
+
+    <!-- Favicon
+         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link rel="icon" type="image/png" href="images/favicon.png">
+
   </head>
   <body>
-    <img id="bottom" src="bg.jpg">
-    <img id="top" src="bg2.jpg">
+    <div class="bg-img-container">
+      <img id="bottom" class="bg" src="images/bg.jpg">
+      <img id="top" class="bg" src="images/bg2.jpg">
+    </div>
+
+
+    <!-- Primary Page Layout
+         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <div class="container">
+      <div class="row">
+        <!-- <div class="one-half column" style="margin-top: 25%"> -->
+        <div class="six columns">
+          <h4></h4>
+          <!-- <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p> -->
+        </div>
+        <div class="six columns">
+          <h1 id="title">Samuel Starbuck Hastings</h1>
+        </div>
+        <!-- <div class="eleven columns">Eleven</div> -->
+      </div>
+    </div>
+
+    <!-- End Document
+         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   </body>
 </html>
+
+
+<!-- <!DOCTYPE html>
+     <html lang="en">
+     <head>
+     <meta charset="UTF-8">
+     <title>Samuel Starbuck</title>
+     <link rel="stylesheet" type="text/css" href="style.css" />
+     </head>
+     <body>
+     <img id="bottom" class="bg" src="assets/bg.jpg">
+     <img id="top" class="bg" src="assets/bg2.jpg">
+     <div
+     </body>
+     </html> -->
