--- a/index.html
+++ b/index.html
@@ -45,7 +45,30 @@
           <!-- <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p> -->
         </div>
         <div class="six columns">
-          <h1 id="title">Samuel Starbuck Hastings</h1>
+          <span id="title" class="h8">S</span>
+          <span id="title" class="h7">a</span>
+          <span id="title" class="h6">m</span>
+          <span id="title" class="h5">u</span>
+          <span id="title" class="h4">e</span>
+          <span id="title" class="h3">l</span>
+          <span id="title" class="h8">S</span>
+          <span id="title" class="h7">t</span>
+          <span id="title" class="h6">a</span>
+          <span id="title" class="h5">r</span>
+          <span id="title" class="h4">b</span>
+          <span id="title" class="h3">u</span>
+          <span id="title" class="h2">c</span>
+          <span id="title" class="h2">k</span>
+          <span id="title" class="h8">H</span>
+          <span id="title" class="h7">a</span>
+          <span id="title" class="h6">s</span>
+          <span id="title" class="h5">t</span>
+          <span id="title" class="h4">i</span>
+          <span id="title" class="h3">n</span>
+          <span id="title" class="h2">g</span>
+          <span id="title" class="h2">s</span>
+
+          <!-- <h1 id="title" class="h1">Samuel Starbuck Hastings</h1> -->
         </div>
         <!-- <div class="eleven columns">Eleven</div> -->
       </div>
