--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <!-- Favicon
          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -29,53 +29,101 @@
 
   </head>
   <body>
-    <div class="bg-img-container">
-      <img id="bottom" class="bg" src="images/bg.jpg">
-      <img id="top" class="bg" src="images/bg2.jpg">
+    <div id="main">
+      <!-- <div class="row"> -->
+        <!-- <div class="two columns"> -->
+        <div id="container" class="bg-img-container">
+          <img id="bottom" class="bg" src="images/bg.jpg">
+          <img id="top" class="bg" src="images/bg2.jpg">
+        </div>
+        <div id="nav">
+          <img id="l4" class="logo-img" src="images/logo-4.svg">
+          <img id="l3" class="logo-img" src="images/logo-3.svg">
+          <img id="l2" class="logo-img" src="images/logo-2.svg">
+          <img id="l1" class="logo-img" src="images/logo-1.svg">
+          <div id="links">
+            <div id="projects" class="link">
+              projects
+            </div>
+            <div id="resume" class="link">
+              resume
+            </div>
+            <div id="contact" class="link">
+              contact
+            </div>
+          </div>
+        </div>
+        
+        <!-- <div id="box-2" class="six columns bg-img-container"> -->
+          <!-- <img id="bottom" class="bg" src="images/bg.jpg">
+               <img id="top" class="bg" src="images/bg2.jpg"> -->
+        <!-- </div> -->
+        <!-- </div> -->
+      <!-- </div> -->
+      <!-- <div class="row"> -->
+        <!-- <div class="two columns"> -->
+        <!-- <div id="box-3" class="six columns bg-img-container"> -->
+          <!-- <img id="bottom" class="bg" src="images/bg.jpg">
+               <img id="top" class="bg" src="images/bg2.jpg"> -->
+        <!-- </div> -->
+        <!-- <div id="box-4" class="six columns bg-img-container"> -->
+          <!-- <img id="bottom" class="bg" src="images/bg.jpg">
+               <img id="top" class="bg" src="images/bg2.jpg"> -->
+        <!-- </div> -->
+        <!-- </div> -->
+      <!-- </div> -->
     </div>
 
+
+
+    <!-- <div>
+         <img id="svg"
+         </div>
+         
+    -->
 
     <!-- Primary Page Layout
          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <div class="container">
-      <div class="row">
+    <!-- <div class="container"> -->
+    <!-- <div class="row"> -->
         <!-- <div class="one-half column" style="margin-top: 25%"> -->
-        <div class="six columns">
-          <h4></h4>
+    <!-- <div class="six columns"> -->
+    <!-- <h4></h4> -->
           <!-- <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p> -->
-        </div>
-        <div class="six columns">
-          <span id="title" class="h8">S</span>
-          <span id="title" class="h7">a</span>
-          <span id="title" class="h6">m</span>
-          <span id="title" class="h5">u</span>
-          <span id="title" class="h4">e</span>
-          <span id="title" class="h3">l</span>
-          <span id="title" class="h8">S</span>
-          <span id="title" class="h7">t</span>
-          <span id="title" class="h6">a</span>
-          <span id="title" class="h5">r</span>
-          <span id="title" class="h4">b</span>
-          <span id="title" class="h3">u</span>
-          <span id="title" class="h2">c</span>
-          <span id="title" class="h2">k</span>
-          <span id="title" class="h8">H</span>
-          <span id="title" class="h7">a</span>
-          <span id="title" class="h6">s</span>
-          <span id="title" class="h5">t</span>
-          <span id="title" class="h4">i</span>
-          <span id="title" class="h3">n</span>
-          <span id="title" class="h2">g</span>
-          <span id="title" class="h2">s</span>
-
+    <!-- </div> -->
+    <!-- <div class="six columns"> -->
+          <!-- <span id="title" class="h8">S</span>
+               <span id="title" class="h7">a</span>
+               <span id="title" class="h6">m</span>
+               <span id="title" class="h5">u</span>
+               <span id="title" class="h4">e</span>
+               <span id="title" class="h3">l</span>
+               <span id="title" class="h8">S</span>
+               <span id="title" class="h7">t</span>
+               <span id="title" class="h6">a</span>
+               <span id="title" class="h5">r</span>
+               <span id="title" class="h4">b</span>
+               <span id="title" class="h3">u</span>
+               <span id="title" class="h2">c</span>
+               <span id="title" class="h2">k</span>
+               <span id="title" class="h8">H</span>
+               <span id="title" class="h7">a</span>
+               <span id="title" class="h6">s</span>
+               <span id="title" class="h5">t</span>
+               <span id="title" class="h4">i</span>
+               <span id="title" class="h3">n</span>
+               <span id="title" class="h2">g</span>
+               <span id="title" class="h2">s</span>
+          -->
           <!-- <h1 id="title" class="h1">Samuel Starbuck Hastings</h1> -->
-        </div>
+    <!-- </div> -->
         <!-- <div class="eleven columns">Eleven</div> -->
-      </div>
-    </div>
-
+    <!-- </div> -->
+    <!-- </div>
+    -->
     <!-- End Document
          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <script src="./js/app.js"></script>
   </body>
 </html>
 
