refine some animations

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- FONT
          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Dosis:400,300,600" rel="stylesheet" type="text/css">
 
     <!-- CSS
          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -37,10 +37,12 @@
           <img id="top" class="bg" src="images/bg2.jpg">
         </div>
         <div id="nav">
-          <img id="l4" class="logo-img" src="images/logo-4.svg">
-          <img id="l3" class="logo-img" src="images/logo-3.svg">
-          <img id="l2" class="logo-img" src="images/logo-2.svg">
-          <img id="l1" class="logo-img" src="images/logo-1.svg">
+          <div id="nav-menu">
+            <img id="circle4" class="nav-img" src="images/logo-4.svg">
+            <img id="circle3" class="nav-img" src="images/logo-3.svg">
+            <img id="circle2" class="nav-img" src="images/logo-2.svg">
+            <img id="circle1" class="nav-img" src="images/logo-1.svg">
+          </div>
           <div id="links">
             <div id="projects" class="link">
               projects
